--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>eCommerce - HTML</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body></body>
+  <h1>Loja de Teclados do Ernani</h1>
+
+  <p>
+    Nesta loja disponibilizo os
+    <strong>melhores produtos de informática do mundo</strong>. Nela você pode
+    comprar o que quiser pelo melhor preço e qualidade.
+  </p>
+
+  <p>Veja a nossa lista de teclados disponíveis:</p>
+
+  <ul>
+    <li>Keycron K2</li>
+    <li>OLKB Plank</li>
+    <li>Ergo Dox</li>
+  </ul>
+
+  <section class="teclado">
+    <h2>Keycron K2</h2>
+    <p>
+      Um teclado bluetooth com ótimo alcance, que usa as switch <em>Cherry Red</em>
+      excelentes para games. Possui <strong>iluminação RGB</strong> com mais de 10 efeitos
+      diferentes. Ver mais detalhes e Preço do Keycron K2
+    </p>
+  </section>
 </html>
