--- a/index.html
+++ b/index.html
@@ -6,29 +6,118 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>eCommerce - HTML</title>
   </head>
-  <body></body>
-  <h1>Loja de Teclados do Ernani</h1>
+  <body style="background-color: rgb(153, 144, 131)">
+    <h1>Loja de Teclados do Ernani</h1>
 
-  <p>
-    Nesta loja disponibilizo os
-    <strong>melhores produtos de informática do mundo</strong>. Nela você pode
-    comprar o que quiser pelo melhor preço e qualidade.
-  </p>
-
-  <p>Veja a nossa lista de teclados disponíveis:</p>
-
-  <ul>
-    <li>Keycron K2</li>
-    <li>OLKB Plank</li>
-    <li>Ergo Dox</li>
-  </ul>
-
-  <section class="teclado">
-    <h2>Keycron K2</h2>
     <p>
-      Um teclado bluetooth com ótimo alcance, que usa as switch <em>Cherry Red</em>
-      excelentes para games. Possui <strong>iluminação RGB</strong> com mais de 10 efeitos
-      diferentes. Ver mais detalhes e Preço do Keycron K2
+      Nesta loja disponibilizo os
+      <strong>melhores produtos de informática do mundo</strong>. Nela você pode
+      comprar o que quiser pelo melhor preço e qualidade.
     </p>
-  </section>
+
+    <p>Veja a nossa lista de teclados disponíveis:</p>
+
+    <ul>
+      <li>Keycron K2</li>
+      <li>OLKB Plank</li>
+      <li>Ergo Dox</li>
+    </ul>
+
+    <section class="teclado">
+      <h2>Keycron K2</h2>
+      <p>
+        Um teclado bluetooth com ótimo alcance, que usa as switch
+        <em>Cherry Red</em> excelentes para games. Possui
+        <strong>iluminação RGB</strong> com mais de 10 efeitos diferentes.
+      </p>
+
+      <img
+        style="width: 400px"
+        src="/imagens/keycron.jpg"
+        alt="Teclado Keycron K2"
+      />
+      <div>
+        <a href="/teclados/keycron.html"
+          >Ver mais detalhes e Preço do Keycron K2</a
+        >
+      </div>
+    </section>
+
+    <section class="teclado">
+      <h2>OLKB Planck</h2>
+      <p>
+        Com apenas <strong>44 teclas</strong> esse teclado ortolinear vai
+        melhorar sua ergonomia ao trabalhar com código. Suas mão nao precisam
+        fazer um caminho muito longo entre uma tecla e outra. E o melhor, possui
+        firmware QMK o que permite você atualizar gravar
+        <em>quantas macros vc desejar.</em>
+      </p>
+
+      <img
+        style="width: 400px"
+        src="/imagens/planck1.jpeg"
+        alt="Teclado OLKB Plank"
+      />
+      <div>
+        <a href="/teclados/planck.html"
+          >Ver mais detalhes e Preço do OLKB Planck</a
+        >
+      </div>
+    </section>
+
+    <section class="teclado">
+      <h2>Ergo Dox</h2>
+      <p>
+        Falando em teclado ergonomico e que <strong>aceita macros</strong>, nao
+        podemos deixar de apresentar o Ergo Dox. Um teclado revolucionario que
+        te ensinará a digitar novamente.
+      </p>
+
+      <img
+        style="width: 400px"
+        src="/imagens/ergodox.jpg"
+        alt="Teclado Ergo Dox"
+      />
+      <div>
+        <a href="/teclados/ergodox.html"
+          >Ver mais detalhes e Preço do Ergo Dox</a
+        >
+      </div>
+    </section>
+
+    <p>Teclados mais vendidos:</p>
+
+    <ol>
+      <li>OLKB Plank</li>
+      <li>Ergo Dox</li>
+      <li>Keycron K2</li>
+    </ol>
+
+    <div class="contato">
+      <p>Se você quiser, entre em contato pelo formulário abaixo:</p>
+
+      <form action="/contato">
+        <label for="nome">Nome: </label>
+        <input type="text" name="nome" id="nome" />
+        <br />
+        <br />
+        <label for="email">E-mail: </label>
+        <input type="email" name="email" id="email" />
+        <br />
+        <br />
+        <label for="mensagem">Mensagem: </label>
+        <textarea id="mensagem"></textarea>
+        <br />
+        <br />
+        <button type="submit">Enviar</button>
+      </form>
+      <footer>
+          <p>Siga-nos nas nossas mídias sociais</p>
+          <a href="https://www.instagram.com/ernanivianna/" target="_blank">Instagram</a>
+          <br/>
+          <br/>
+          <a href="https://www.youtube.com/user/ernanivianna" target="_blank">Youtube</a>
+      </footer>
+    </div>
+  </body>
 </html>
