Corrigidos os caminhos das pastas para imagens e html's dos links que estavam usando uma / antes do diretório, mesmo que o index.html estivesse no mesmo nível

--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
 
       <img
         style="width: 400px"
-        src="/imagens/keycron.jpg"
+        src="imagens/keycron.jpg"
         alt="Teclado Keycron K2"
       />
       <div>
-        <a href="/teclados/keycron.html"
+        <a href="teclados/keycron.html"
           >Ver mais detalhes e Preço do Keycron K2</a
         >
       </div>
@@ -55,11 +55,11 @@
 
       <img
         style="width: 400px"
-        src="/imagens/planck1.jpeg"
+        src="imagens/planck1.jpeg"
         alt="Teclado OLKB Plank"
       />
       <div>
-        <a href="/teclados/planck.html"
+        <a href="teclados/planck.html"
           >Ver mais detalhes e Preço do OLKB Planck</a
         >
       </div>
@@ -75,11 +75,11 @@
 
       <img
         style="width: 400px"
-        src="/imagens/ergodox.jpg"
+        src="imagens/ergodox.jpg"
         alt="Teclado Ergo Dox"
       />
       <div>
-        <a href="/teclados/ergodox.html"
+        <a href="teclados/ergodox.html"
           >Ver mais detalhes e Preço do Ergo Dox</a
         >
       </div>
